--- a/seniorer/site/seniorer.html
+++ b/seniorer/site/seniorer.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <header></header>
+        <header>
+            
+        </header>
     </div>
 </body>
 </html>
