Skapat en knapp

--- a/seniorer/site/seniorer.html
+++ b/seniorer/site/seniorer.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <header>
-            
         </header>
+        <button class="train">Börja träna</button>
     </div>
 </body>
 </html>
