Gjort dropdown meny

--- a/seniorer/site/seniorer.html
+++ b/seniorer/site/seniorer.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <header>
-        </header>
+        <header></header>
         <button class="train">Börja träna</button>
+        <div class="dropdown">
+                <button class="dropbtn">Meny</button>
+                <div class="dropdown-content">
+                  <a href="#">Om oss</a>
+                  <a href="#">Kontakta oss</a>
+                </div>
+        </div>
     </div>
 </body>
 </html>
